implement user and device creation and update
use request objects in API instead of plain strings
