# src/main/resources/api.yaml
@@ -53,7 +53,7 @@ paths:
         content:
           application/json:
             schema:
-              type: string
+              $ref: '#/components/schemas/UpdateAddressRequest'
       responses:
         204:
           description: address updated
@@ -118,7 +118,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/DeviceStatus'
+              $ref: '#/components/schemas/UpdateStatusRequest'
       responses:
         204:
           description: status updated
@@ -143,6 +143,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Device'
+    UpdateAddressRequest:
+      type: object
+      properties:
+        address:
+          type: string
     Device:
       type: object
       required: [code, status]
@@ -152,6 +157,14 @@ components:
           format: uuid
         status:
           $ref: '#/components/schemas/DeviceStatus'
+        customer:
+          type: string
+          writeOnly: true
     DeviceStatus:
       type: string
       enum: [ACTIVE, INACTIVE, LOST]
+    UpdateStatusRequest:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/DeviceStatus'
